--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 </head>
 <body>
 <a-scene>
-    <a-entity position="0 30 5">
-        <a-camera></a-camera>
-    </a-entity>
-    <a-sky color="skyblue"></a-sky>
     <a-assets>
         <img id="ground" src="assets/dirt.jpg">
+        <a-asset-item id="bigg" src="assets/the_big_g_building/scene.gltf"></a-asset-item>
     </a-assets>
+g
+    <a-entity position="0 30 5">
+    <!--<a-entity position="0 0 5">-->
+        <a-camera></a-camera>
+    </a-entity>
+    <a-entity daydream-controls></a-entity>
+    <a-sky color="skyblue"></a-sky>
+    <a-gltf-model src="#bigg"></a-gltf-model>
+
     <!-- Textured plane parallel to ground. -->
     <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>
 </a-scene>
