--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <!--<a-entity position="0 0 5">-->
         <a-camera></a-camera>
     </a-entity>
+
     <a-entity daydream-controls></a-entity>
+    <a-entity laser-controls line="color: red; opacity: 0.75"></a-entity>
+
     <a-sky color="skyblue"></a-sky>
     <a-gltf-model src="#bigg"></a-gltf-model>
 
