--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </a-entity>
 
     <a-entity daydream-controls></a-entity>
-    <a-entity laser-controls line="color: red; opacity: 0.75"></a-entity>
+    <a-entity llaser-controls="hand: right" raycaster="showLine: true; far: 100" line="color: orange; opacity: 0.5"></a-entity>
 
     <a-sky color="skyblue"></a-sky>
     <a-gltf-model src="#bigg"></a-gltf-model>
