--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <a-camera></a-camera>
     </a-entity>
 
-    <a-entity daydream-controls></a-entity>
-    <a-entity laser-controls="hand: right" raycaster="showLine: true; far: 100" line="color: orange; opacity: 0.5"></a-entity>
+    <a-entity id="leftHand" laser-controls="hand: left" raycaster="objects: [mixin='box']"></a-entity>
+    <a-entity id="rightHand" laser-controls="hand: right" raycaster="objects: [mixin='box']" line="color: #118A7E"></a-entity>
 
     <a-sky color="skyblue"></a-sky>
     <a-gltf-model src="#bigg"></a-gltf-model>
