--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>360 Video</title>
     <meta name="description" content="360 Video — A-Frame">
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-layout-component@4.2/dist/aframe-layout-component.min.js"></script>
 </head>
 <body>
 <a-scene>
@@ -13,19 +14,36 @@
         <a-asset-item id="bigg" src="assets/the_big_g_building/scene.gltf"></a-asset-item>
     </a-assets>
 
-    <a-entity position="0 30 5">
-    <!--<a-entity position="0 0 5">-->
+    <a-entity layout="type: line" position="0 0 0">
+        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+    </a-entity>
+    <a-entity layout="type: line" position="0 1 0">
+        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+    </a-entity>
+    <a-entity layout="type: line" position="0 2 0">
+        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+    </a-entity>
+
+
+    <a-entity laser-controls line="color: red; opacity: 0.75"></a-entity>
+
+    <!--<a-entity position="0 10 5">-->
+    <a-entity position="0 0 5">
         <a-camera></a-camera>
     </a-entity>
 
-    <a-entity id="leftHand" laser-controls="hand: left" raycaster="objects: [mixin='box']"></a-entity>
-    <a-entity id="rightHand" laser-controls="hand: right" raycaster="objects: [mixin='box']" line="color: #118A7E"></a-entity>
 
     <a-sky color="skyblue"></a-sky>
-    <a-gltf-model src="#bigg"></a-gltf-model>
+    <!--<a-gltf-model src="#bigg"></a-gltf-model>-->
 
     <!-- Textured plane parallel to ground. -->
-    <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>
+    <!--<a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>-->
 </a-scene>
 </body>
 </html>
