--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     </a-assets>
 
     <a-entity layout="type: line" position="0 0 0">
-        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
-        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
-        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane id="00" src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane id="01" src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane id="02" src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
     </a-entity>
     <a-entity layout="type: line" position="0 1 0">
-        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
-        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
-        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane id="10" src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane id="11" src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane id="12" src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
     </a-entity>
     <a-entity layout="type: line" position="0 2 0">
-        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
-        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
-        <a-plane src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane id="20" src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane id="21" src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
+        <a-plane id="22" src="#ground" height="1" width="1" rotation="0 0 0"></a-plane>
     </a-entity>
 
 
