--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://unpkg.com/aframe-layout-component@4.2/dist/aframe-layout-component.min.js"></script>
 </head>
 <body>
+<audio autoplay loop>
+    <source src="assets/sounds/bgm.mp3" type="audio/mpeg">
+</audio>
 <a-scene>
     <a-assets>
         <img id="ground" src="assets/dirt.jpg">
@@ -37,8 +40,6 @@
     <a-entity position="0 0 5">
         <a-camera></a-camera>
     </a-entity>
-
-
     <a-sky color="skyblue"></a-sky>
     <!--<a-gltf-model src="#bigg"></a-gltf-model>-->
 
