--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -1,3 +1,5 @@
+
+
 <template name = 'scene'><div id = 'scene'>
   <a-scene>
     <a-assets>
@@ -34,6 +36,10 @@
 </div></template>
 
 <template name = 'gui'><div id = 'gui'>
+  <audio autoplay loop>
+      <source src="/sounds/bgm.mp3" type="audio/mpeg">
+  </audio>
+
   <div id = 'economy'>
     <div id = 'level' class = 'field'>Level 1</div>
     <div id = 'coins' class = 'field' style = 'border-right: none;'>{{coins}} Coins</div>
