house assets are there

--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -9,8 +9,10 @@
 
         <img id="ground" src="assets/dirt.jpg">
         <a-asset-item id="tree" src="assets/tree/scene.gltf"></a-asset-item>
-        <a-asset-item id="house" src="assets/farm_house0/scene.gltf"></a-asset-item>
+        <a-asset-item id="farmhouse" src="assets/farm_house/scene.gltf"></a-asset-item>
         <a-asset-item id="mansion" src="assets/mansion/scene.gltf"></a-asset-item>
+        <a-asset-item id="smallhouse" src="assets/smallhouse/scene.gltf"></a-asset-item>
+        <a-asset-item id="villa" src="assets/villa/scene.gltf"></a-asset-item>
 
     </a-assets>
 
@@ -26,7 +28,7 @@
 
     <a-sky id="bg" radius="72" src="#skyTexture" theta-length="90"></a-sky>
 
-      <!--<a-entity aframe-slideshow="nbslides:5;folder:public/assets/slides/;namingConv:slide_%num%;startpos:1"></a-entity>-->
+      <!--<a-entity aframe-slideshow="nbslides:6;folder:public/assets/slides/;namingConv:slide_%num%;startpos:1"></a-entity>-->
 
       <a-entity position="10 0 -3" scale="0.5 0.5 0.5">
         <a-gltf-model src="#mansion"></a-gltf-model>
