--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="360 Video — A-Frame">
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-layout-component@4.2/dist/aframe-layout-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-slideshow-component/dist/aframe-slideshow-component.min.js"></script>
 </head>
 <body>
 <audio autoplay loop>
