--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -9,7 +9,7 @@
 
         <img id="ground" src="assets/dirt.jpg">
         <a-asset-item id="tree" src="assets/tree/scene.gltf"></a-asset-item>
-        <a-asset-item id="farmhouse" src="assets/farm_house/scene.gltf"></a-asset-item>
+        <a-asset-item id="farmhouse" src="assets/farmhouse/scene.gltf"></a-asset-item>
         <a-asset-item id="mansion" src="assets/mansion/scene.gltf"></a-asset-item>
         <a-asset-item id="smallhouse" src="assets/smallhouse/scene.gltf"></a-asset-item>
         <a-asset-item id="villa" src="assets/villa/scene.gltf"></a-asset-item>
