weed asset added

--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -13,6 +13,7 @@
         <a-asset-item id="mansion" src="assets/mansion/scene.gltf"></a-asset-item>
         <a-asset-item id="smallhouse" src="assets/smallhouse/scene.gltf"></a-asset-item>
         <a-asset-item id="villa" src="assets/villa/scene.gltf"></a-asset-item>
+        <a-asset-item id="weed" src="assets/weed/scene.gltf"></a-asset-item>
 
     </a-assets>
 
