--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -14,6 +14,7 @@
         <a-asset-item id="smallhouse" src="assets/smallhouse/scene.gltf"></a-asset-item>
         <a-asset-item id="villa" src="assets/villa/scene.gltf"></a-asset-item>
         <a-asset-item id="weed" src="assets/weed/scene.gltf"></a-asset-item>
+        <a-asset-item id="snoop" src="assets/snoop_dogg/scene.gltf"></a-asset-item>
 
     </a-assets>
 
