--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -15,6 +15,8 @@
         <a-asset-item id="villa" src="assets/villa/scene.gltf"></a-asset-item>
         <a-asset-item id="weed" src="assets/weed/scene.gltf"></a-asset-item>
         <a-asset-item id="snoop" src="assets/snoop_dogg/scene.gltf"></a-asset-item>
+        <a-asset-item id="astronaut" src="assets/astronaut/scene.gltf"></a-asset-item>
+        <a-asset-item id="mars_base" src="assets/mars_base/scene.gltf"></a-asset-item>
 
     </a-assets>
 
