trying to fix autoplay on mobile

--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -21,7 +21,7 @@
     </a-assets>
 
       <a-entity>
-          <audio autoplay loop>
+          <audio autoplay muted loop>
               <source src="assets/sounds/bgm.mp3" type="audio/mpeg">
           </audio>
       </a-entity>
