--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -8,16 +8,17 @@
 
         <img id="ground" src="assets/dirt.jpg">
         <a-asset-item id="tree" src="assets/tree/scene.gltf"></a-asset-item>
-        <a-asset-item id="farmhouse" src="assets/farm_house/scene.gltf"></a-asset-item>
+        <!--<a-asset-item id="farmhouse" src="assets/farm_house/scene.gltf"></a-asset-item>-->
         <a-asset-item id="mansion" src="assets/mansion/scene.gltf"></a-asset-item>
         <a-asset-item id="smallhouse" src="assets/smallhouse/scene.gltf"></a-asset-item>
-        <a-asset-item id="villa" src="assets/villa/scene.gltf"></a-asset-item>
+        <a-asset-item id="mars_base" src="assets/mars_base/scene.gltf"></a-asset-item>
+        <!--<a-asset-item id="villa" src="assets/villa/scene.gltf"></a-asset-item>-->
 
         <a-asset-item id="astronaut" src="assets/astronaut/scene.gltf"></a-asset-item>
     </a-assets>
     
     <a-entity>
-        <audio autoplay muted loop>
+        <audio autoplay loop>
             <source src="assets/sounds/bgm.mp3" type="audio/mpeg">
         </audio>
     </a-entity>
